<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="syq-1H-DCf">
                                <rect key="frame" x="16" y="48" width="343" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="35G-uX-uX6">
                                <rect key="frame" x="16" y="86" width="343" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9lP-Dv-iK8">
                                <rect key="frame" x="16" y="136" width="343" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="onClickedLogIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kni-BG-3b1"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9u-i9-Zyu">
                                <rect key="frame" x="16" y="230" width="343" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="70w-GZ-bPC"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d9u-i9-Zyu" secondAttribute="trailing" constant="16" id="C8r-Nt-W1F"/>
                            <constraint firstItem="d9u-i9-Zyu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Ciw-Z7-wmm"/>
                            <constraint firstItem="syq-1H-DCf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Dfr-kJ-bq1"/>
                            <constraint firstItem="35G-uX-uX6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="EyF-hz-MeE"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="35G-uX-uX6" secondAttribute="trailing" constant="16" id="TRe-w8-EgC"/>
                            <constraint firstItem="syq-1H-DCf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="28" id="WKa-AI-gGw"/>
                            <constraint firstItem="9lP-Dv-iK8" firstAttribute="top" secondItem="35G-uX-uX6" secondAttribute="bottom" constant="20" id="boh-7f-KbA"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="syq-1H-DCf" secondAttribute="trailing" constant="16" id="dSh-nI-WmT"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9lP-Dv-iK8" secondAttribute="trailing" constant="16" id="gh1-nY-e5P"/>
                            <constraint firstItem="9lP-Dv-iK8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="pWk-6H-4Lr"/>
                            <constraint firstItem="d9u-i9-Zyu" firstAttribute="top" secondItem="9lP-Dv-iK8" secondAttribute="bottom" constant="64" id="v6g-bG-nHp"/>
                            <constraint firstItem="35G-uX-uX6" firstAttribute="top" secondItem="syq-1H-DCf" secondAttribute="bottom" constant="8" id="vIb-o8-IQP"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="emailTextField" destination="syq-1H-DCf" id="Ev7-XL-Bfy"/>
                        <outlet property="passwordTextField" destination="35G-uX-uX6" id="o7d-9K-Wph"/>
                        <outlet property="resultLabel" destination="d9u-i9-Zyu" id="yKp-Wa-A2c"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
        </scene>
    </scenes>
</document>
